--- a/content/home.html
+++ b/content/home.html
@@ -2,18 +2,22 @@
 layout: default
 ---
 
-<section>
-  <h3>Preface</h3>
+<h2>&#149; &#149; &#149; &#149; &#149;</h2>
 
-  <p>Humanity is challenged by what the World Health Organization (WHO) predicts by 2017, an epidemic of chronic life style illnesses - heart disease, hypertension, diabetes and obesity to mention a few.</p>
+<p>
+This Workbook Journal is a 21-day, bite-sized, application of modified healing and martial spirit of Tai Chi and Qigong, programmed as daily life practices within one's busy lifestyle to become effortless habits after 21-Days.
+</p>
 
-  <p>These illnesses can be prevented by managing one's lifestyle with exercise, stress reduction and diet modification. However, solutions are stifled by a lifestyle burdened by time constraints, motivation and clear knowledge of what can be done.</p>
-</section>
+<p>
+This book centers on Chi or life energy. It talks to busy people who have affinity for Tai Chi and Qigong and an inner resonance with being a Warrior for Wellbeing.
+</p>
 
-<section>
-  <h3>Why I wrote the book</h3>
+<p>
+It will guide you from beginning to the end of your journey. It includes <b>PART 1: 9 day preparation</b>, that will explain what you need to do for the 21 day challenge, <b>PART 2: the 21 day chi habit journal</b>, where you would record the accounts of your 21 day experience.
+</p>
 
-  <p>This book centers on Chi or life energy. It talks to busy people who have affinity for Tai Chi and Qigong and an inner resonance with being a Warrior for Well-Being.</p>
+<h2>&#149; &#149; &#149; &#149; &#149;</h2>
 
-  <p>As a Tai Chi and Qigong practitioner and teacher for more than three decades, I have an intimate access to these practices that Time magazine has termed the 'perfect exercise'. As a wellness practice, I believe this discipline has wisdom and tools that the world needs. This book is written primarily to provide modern busy people ready access to these nuggets and jewels of wisdom which are prized legacies from a long lineage of sages in China. Secondarily, it is my hope that this practice becomes an integral part of the reader's daily life - as the daily brushing of one's teeth. Only then can permanent and long term benefits be retained and lifestyle illnesses be averted or at the very least alleviated.</p>
-</section>
+<p>
+<a href="./author.html">ED SEVILLA</a> is a Tai Chi and Qigong teacher, his practice and teaching goes all the way back to 1975. He learned from Master David Chan, the Hsin-I Liu He Ba Fa, from Master Li Jun Feng, the Chen and Yang styles of Tai Chi Chuan, Master Paul Lam, Tai Chi for Arthritis, Master Stephen Wu, Qigong, Master Saar Herman, Dao Yin Bao Jang Gong.
+</p>
