Add icons to contacts section. Remove list-style. Box in well.

--- a/content/author.html
+++ b/content/author.html
@@ -12,52 +12,56 @@ layout: default
 /insert profile image here/
 </p>
 
-<ul>
+<ul id="contact_list" class="well">
+  <li>
+    <img src="../images/glyphicons_139_phone.png" />
+    <b>Mobile | Landline</b>
+    <ul>
+      <li>+63.917. 549.19.49</li>
+      <li>+632. 211. 40.46</li>
+    </ul>
+  </li>
 
-<li>
-  <b>Mobile | Landline</b>
-  <ul>
-    <li>+63.917. 549.19.49</li>
-    <li>+632. 211. 40.46</li>
-  </ul>
-</li>
+  <li>
+    <img src="../images/glyphicons_329_e-mail.png" />
+    <b>Email</b>
+    <ul>
+      <li><a href="mailto:ed.stillmountain@gmail.com">ed.stillmountain@gmail.com</a></li>
+      <li><a href="mailto:chihabit@gmail.com">chihabit@gmail.com</a></li>
+    </ul>
+  </li>
 
-<li>
-  <b>Email</b>
-  <ul>
-    <li><a href="mailto:ed.stillmountain@gmail.com">ed.stillmountain@gmail.com</a></li>
-    <li><a href="mailto:chihabit@gmail.com">chihabit@gmail.com</a></li>
-  </ul>
-</li>
+  <li>
+    <img src="../images/glyphicons_320_facebook.png" />
+    <b>Facebook</b>
+    <ul>
+      <li><a href="http://www.facebook.com/ed.sevilla" target="_blank">Ed Sevilla</a></li>
+      <li><a href="http://www.facebook.com/ChiHabit" target="_blank">Chi Habit</a></li>
+    </ul>
+  </li>
 
-<li>
-  <b>Facebook</b>
-  <ul>
-    <li><a href="http://www.facebook.com/ed.sevilla" target="_blank">Ed Sevilla</a></li>
-    <li><a href="http://www.facebook.com/ChiHabit" target="_blank">Chi Habit</a></li>
-  </ul>
-</li>
+  <li>
+    <img src="../images/glyphicons_342_youtube.png" />
+    <a href="http://www.youtube.com/user/edstillmountain09" target="_blank">
+      <b>YouTube Channel</b>
+    </a>
+  </li>
 
-<li>
-  <a href="http://www.youtube.com/user/edstillmountain09" target="_blank">
-    <b>YouTube Channel</b>
-  </a>
-</li>
+  <li>
+    <img src="../images/glyphicons_327_rss.png" />
+    <b>Blogs</b>
+    <ul>
+      <li><a href="http://edstillmountain.blogspot.com/" target="_blank">Still Mountain Tai Chi Kung Institute</a></li>
+      <li><a href="http://www.taichicode.blogspot.com/" target="_blank">The Tai Chi Code</a></li>
+    </ul>
+  </li>
 
-<li>
-  <b>Blogs</b>
-  <ul>
-    <li><a href="http://edstillmountain.blogspot.com/" target="_blank">Still Mountain Tai Chi Kung Institute</a></li>
-    <li><a href="http://www.taichicode.blogspot.com/" target="_blank">The Tai Chi Code</a></li>
-  </ul>
-</li>
-
-<li>
-  <a href="http://ph.linkedin.com/pub/ed-sevilla/6/667/762" target="_blank">
-    <b>LinkedIn</b>
-  </a>
-</li>
-
+  <li>
+    <img src="../images/glyphicons_337_linked_in.png" />
+    <a href="http://ph.linkedin.com/pub/ed-sevilla/6/667/762" target="_blank">
+      <b>LinkedIn</b>
+    </a>
+  </li>
 </ul>
 
 <h2>&#149; &#149; &#149; &#149; &#149;</h2>
