Add profile image in author page.

--- a/content/author.html
+++ b/content/author.html
@@ -8,10 +8,6 @@ layout: default
 
 <h2>&#149; &#149; &#149; &#149; &#149;</h2>
 
-<p>
-/insert profile image here/
-</p>
-
 <ul id="contact_list" class="well">
   <li>
     <img src="../images/glyphicons_139_phone.png" />
@@ -67,6 +63,7 @@ layout: default
 <h2>&#149; &#149; &#149; &#149; &#149;</h2>
 
 <p>
+  <img class="profile_image" src="../images/ed.png" style="float: left;" />
 Ed Sevilla - The Author and a Tai Chi and Qigong teacher, his practice and teaching goes all the way back to 1975. He learned from Master David Chan, the Hsin-I Liu He Ba Fa, from Master Li Jun Feng, the Chen and Yang styles of Tai Chi Chuan, Master Paul Lam, Tai Chi for Arthritis, Master Stephen Wu, Qigong, Master Saar Herman, Dao Yin Bao Jang Gong.
 </p>
 
